--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,9 @@
     <string name="nav_header_subtitle">android.studio@android.com</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
+    <string name="search">Buscar Contacto...</string>
+    <string name="switch_title">Cambiar vista</string>
+    <string name="nuevo">Nuevo Contacto</string>
 
     <string name="menu_home">Mascotas</string>
     <string name="menu_gallery">Tus Publicaciones</string>
@@ -17,10 +20,10 @@
     <string name="prompt_email">Enter your Email</string>
     <string name="action_sing_in">Next</string>
     <string name="pdhn">© Copyright 2020</string>
-    
+
     <string name="error_fleld_required">This field is required</string>
     <string name="error_invalid_email">This email address is invalid</string>
-    
+
     <string name="action_sing_in_short">Sing In</string>
     <string name="prompt_password">Enter your password</string>
     <string name="error_invalid_password">This password is invalid</string>
